--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,18 @@
 {
-    "extends": ["airbnb/base"]
+	"env": {
+		"browser": true,
+		"es2021": true
+	},
+	"extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaVersion": 12,
+		"sourceType": "module"
+	},
+	"plugins": ["@typescript-eslint"],
+	"rules": {
+		"indent": ["error", "tab"],
+		"quotes": ["error", "backtick", { "avoidEscape": false }],
+		"semi": ["error", "never"]
+	}
 }
