--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "license": "ISC",
     "devDependencies": {
         "@types/node": "^15.3.1",
+        "@typescript-eslint/eslint-plugin": "^4.24.0",
+        "@typescript-eslint/parser": "^4.24.0",
         "eslint": "^7.26.0",
         "eslint-config-airbnb": "^18.2.1",
         "eslint-config-prettier": "^8.3.0",
@@ -23,10 +25,12 @@
         "typescript": "^4.2.4"
     },
     "dependencies": {
+        "dotenv": "^9.0.2",
         "express": "^4.17.1",
         "nodemon": "^2.0.7",
         "pg": "^8.6.0",
         "ts-node": "^9.1.1",
-        "tslint": "^6.1.3"
+        "tslint": "^6.1.3",
+        "typeorm": "^0.2.32"
     }
 }
