--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
-    "name": "videogallery",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "node ./src/index.ts",
-        "dev": "nodemon ./src/index.ts",
-        "eslint": "eslint"
-    },
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@types/node": "^15.3.1",
-        "@typescript-eslint/eslint-plugin": "^4.24.0",
-        "@typescript-eslint/parser": "^4.24.0",
-        "eslint": "^7.26.0",
-        "eslint-config-airbnb": "^18.2.1",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-html": "^6.1.2",
-        "eslint-plugin-import": "^2.23.2",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.4.0",
-        "prettier": "^2.3.0",
-        "typescript": "^4.2.4"
-    },
-    "dependencies": {
-        "dotenv": "^9.0.2",
-        "express": "^4.17.1",
-        "nodemon": "^2.0.7",
-        "pg": "^8.6.0",
-        "ts-node": "^9.1.1",
-        "tslint": "^6.1.3",
-        "typeorm": "^0.2.32"
-    }
+	"name": "videogallery",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node ./src/index.ts",
+		"dev": "nodemon ./src/index.ts",
+		"eslint": "eslint"
+	},
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/node": "^15.3.1",
+		"@typescript-eslint/eslint-plugin": "^4.24.0",
+		"@typescript-eslint/parser": "^4.24.0",
+		"eslint": "^7.26.0",
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-html": "^6.1.2",
+		"eslint-plugin-import": "^2.23.2",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-prettier": "^3.4.0",
+		"prettier": "^2.3.0",
+		"typescript": "^4.2.4"
+	},
+	"dependencies": {
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
+		"dotenv": "^9.0.2",
+		"express": "^4.17.1",
+		"nodemon": "^2.0.7",
+		"pg": "^8.6.0",
+		"ts-node": "^9.1.1",
+		"tslint": "^6.1.3",
+		"typeorm": "^0.2.32"
+	}
 }
