--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
 		"typescript": "^4.2.4"
 	},
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
 		"cors": "^2.8.5",
 		"dotenv": "^9.0.2",
 		"express": "^4.17.1",
+		"jsonwebtoken": "^8.5.1",
 		"nodemon": "^2.0.7",
 		"pg": "^8.6.0",
 		"ts-node": "^9.1.1",
