--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
+		"multer": "^1.4.2",
 		"pg": "^8.6.0",
 		"typeorm": "^0.2.32"
 	}
