--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"multer": "^1.4.2",
 		"pg": "^8.6.0",
-		"typeorm": "^0.2.32"
+		"typeorm": "^0.2.32",
+		"winston": "^3.3.3"
 	}
 }
