--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
 		"jsonwebtoken": "^8.5.1",
 		"multer": "^1.4.2",
 		"pg": "^8.6.0",
+		"swagger-jsdoc": "^6.1.0",
+		"swagger-ui-express": "^4.1.6",
 		"typeorm": "^0.2.32",
 		"winston": "^3.3.3"
 	}
