--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
 		"indent": ["error", "tab"],
 		"quotes": ["error", "backtick", { "avoidEscape": false }],
 		"semi": ["error", "never"],
-		"@typescript-eslint/no-unused-vars": "off"
+		"@typescript-eslint/no-unused-vars": "off",
+		"@typescript-eslint/explicit-module-boundary-types": "off"
 	}
 }
