--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "./src/index.ts",
 	"scripts": {
-		"start": "node ./src/index.ts",
+		"start": "ts-node ./src/index.ts",
 		"dev": "nodemon ./src/index.ts",
 		"eslint": "eslint src/",
 		"precommit": "lint-staged"
@@ -33,6 +33,7 @@
 	},
 	"dependencies": {
 		"body-parser": "^1.19.0",
+		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
